docs/v0.1.2/api-reference/common-column-props.mdx
---
title: "Common Column Props"
---

All column types share these properties.

## id

**Type:** `string`

**Required:** Yes

**Description:**  
Unique identifier for the column.

---

## type

**Type:** `ColumnType`

**Required:** Yes

**Description:**  
Defines the column type.

---

## label

**Type:** `string`

**Required:** Yes

**Description:**  
Display name for the column.

---

## suggestedMappingKeywords

**Type:** `string[]`

**Required:** No

**Description:**  
Keywords to assist in automatic mapping.

---

## isReadOnly

**Type:** `boolean`

**Required:** No

**Description:**  
Indicates whether the column is editable.

---

## validators

**Type:** `ImporterValidatorDefinition[]`

**Required:** No

**Description:**  
Array of validation rules.

---

## transformers

**Type:** `ImporterTransformerDefinition[]`

**Required:** No

**Description:**  
Array of transformation rules.
